--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -31,12 +31,13 @@ jobs:
     
     # checkout the code from the repository
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
 # adding aws keys. Please store the value of these key in GitHub variables
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
+        aws-region: ${{ github.event.inputs.awsRegion }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
@@ -57,7 +58,7 @@ jobs:
       working-directory: .
       
     # Apply the Terraform plan
-    - name: Terraform vars
+    #- name: Terraform vars
     - name: terraform apply
       run: terraform apply -var instanceName=${{ github.event.inputs.instanceName }} -var awsRegion=${{ github.event.inputs.awsRegion }} -var instanceType=${{ github.event.inputs.instanceType }} -auto-approve
       working-directory: .
@@ -71,12 +72,13 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       
 # adding aws keys. Please store the value of these key in GitHub variables
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
+        aws-region: ${{ github.event.inputs.awsRegion }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         #aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
@@ -92,6 +94,6 @@ jobs:
       
     # Destroy all resources 
     - name: Terraform Destroy
-    - name: terraform apply
+    #- name: terraform apply
       run: terraform destroy -var instanceName=${{ github.event.inputs.instanceName }} -var awsRegion=${{ github.event.inputs.awsRegion }} -auto-approve
       working-directory: .
