--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -60,6 +60,9 @@ jobs:
     # Apply the Terraform plan
     #- name: Terraform vars
     - name: terraform apply
+      env:
+        TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: terraform apply -var instanceName=${{ github.event.inputs.instanceName }} -var awsRegion=${{ github.event.inputs.awsRegion }} -var instanceType=${{ github.event.inputs.instanceType }} -auto-approve
       working-directory: .
 
