--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -100,5 +100,5 @@ jobs:
       env:
         TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}    
-      run: terraform destroy -target aws_instance.{{ github.event.inputs.instanceName }}
+      run: terraform destroy -target aws_instance.${{ github.event.inputs.instanceName }}
       working-directory: .
